force-app/main/default/objects/News_Events__c.object
<CustomObject>
    <fields>
        <fullName>School_Override_Field__c</fullName>
        <inlineHelpText>News: Will show on the site of the school that the record owner belongs to if &apos;No Override&apos; is selected. Otherwise on the sites of the schools listed.
Others: On the site of the school that the related student group belongs to plus optional sandboxes.</inlineHelpText>
        <label>School Override Field</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Override</fullName>
                    <default>true</default>
                    <label>No Override</label>
                </value>
                <value>
                    <fullName>Brasilia</fullName>
                </value>
                <value>
                    <fullName>Kuala Lumpur</fullName>
                </value>
                <value>
                    <fullName>Manila</fullName>
                </value>
                <value>
                    <fullName>Marbella</fullName>
                </value>
                <value>
                    <fullName>Moscow</fullName>
                </value>
                <value>
                    <fullName>Nanjing</fullName>
                </value>
                <value>
                    <fullName>Navarra</fullName>
                </value>
                <value>
                    <fullName>New York</fullName>
                </value>
                <value>
                    <fullName>São Paulo</fullName>
                </value>
                <value>
                    <fullName>Tashkent</fullName>
                </value>
                <value>
                    <fullName>Yangon</fullName>
                </value>
                <value>
                    <fullName>Sandboxes</fullName>
                </value>
                <value>
                    <fullName>Group Site</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>School_Text__c</fullName>
        <description>Populated with the value from School__c to be used in sharing rules. If the school of the owner is changed (very rare scenario as there is validation in place to prevent this) the value in this field will not be updated until the record is next edited.</description>
        <label>School Text</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>The British College of Brazil</fullName>
                </value>
                <value>
                    <fullName>The British International School of Kuala Lumpur</fullName>
                </value>
                <value>
                    <fullName>The British School Yangon</fullName>
                </value>
                <value>
                    <fullName>The British School of Brasilia</fullName>
                </value>
                <value>
                    <fullName>The British International School of Marbella</fullName>
                </value>
                <value>
                    <fullName>The British School of Nanjing</fullName>
                </value>
                <value>
                    <fullName>The British School of Navarra</fullName>
                </value>
                <value>
                    <fullName>The British School of Tashkent</fullName>
                </value>
                <value>
                    <fullName>The British Schools Foundation</fullName>
                </value>
                <value>
                    <fullName>The International School of Moscow</fullName>
                </value>
                <value>
                    <fullName>Nord Anglia International School Manila</fullName>
                </value>
                <value>
                    <fullName>The New York International School</fullName>
                </value>
                <value>
                    <fullName>NAE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <formula>IF(
   AND(
       TEXT(Share_with_Admin_Dept_of__c) != &quot;&quot;, 
       TEXT(Share_with_Admin_Dept_of__c) != &quot;Do Not Share&quot;
       ),
   TEXT(Share_with_Admin_Dept_of__c), 
   TEXT(Owner:User.School__c)
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schools_List_Copy__c</fullName>
        <formula>IF( 
   CONTAINS(RecordType.DeveloperName, &quot;Translation&quot;), 
   English_Parent__r.School_List__c, 
   School_List__c 
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School Sites</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Automated_Reminder_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked by means of a workflow rule/field update to trigger a reminder email to be sent when the new date falls within the next 2 weeks.</description>
        <label>Send Automated Reminder Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Share_with_Admin_Dept_of__c</fullName>
        <description>Allows a group level employee to share the record with the News &amp; Events Managers (public group) of a specific school. Required in cases when the event is created at group level and later needs to be edited at school level.</description>
        <inlineHelpText>Only available to group level employees. Allows for events created at group level to be subsequently managed by an individual school.</inlineHelpText>
        <label>Share with Content Managers Of</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Do Not Share</fullName>
                    <default>true</default>
                    <label>Do Not Share</label>
                </value>
                <value>
                    <fullName>The British College of Brazil</fullName>
                </value>
                <value>
                    <fullName>The British International School of Kuala Lumpur</fullName>
                </value>
                <value>
                    <fullName>The British School Yangon</fullName>
                </value>
                <value>
                    <fullName>The British International School of Marbella</fullName>
                </value>
                <value>
                    <fullName>The British School of Nanjing</fullName>
                </value>
                <value>
                    <fullName>The British School of Navarra</fullName>
                </value>
                <value>
                    <fullName>The British School of Tashkent</fullName>
                </value>
                <value>
                    <fullName>The International School of Moscow</fullName>
                </value>
                <value>
                    <fullName>The New York International School</fullName>
                </value>
                <value>
                    <fullName>Nord Anglia International School Manila</fullName>
                </value>
                <value>
                    <fullName>The British School of Brasilia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_in_Video_Gallery__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if you want to also show the videos of this record in the Video Gallery section of the school website.</inlineHelpText>
        <label>Show in Video Gallery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <formula>VALUE(

IF(TEXT(Keep_in_News_Slideshow_Until_Override__c) != &quot;&quot;, &quot;2&quot;, &quot;1&quot;) &amp;

LEFT(RIGHT(TEXT(Event_Start_Date__c), 10), 4) &amp; 
LEFT(RIGHT(TEXT(Event_Start_Date__c), 5), 2) &amp; 
LEFT(RIGHT(TEXT(Event_Start_Date__c), 2), 2) &amp;

CASE(RecordType.Name, &quot;Holiday&quot;, &quot;2&quot;, &quot;Notice&quot;, &quot;3&quot;, &quot;Event&quot;, &quot;4&quot;, &quot;News&quot;, &quot;0&quot;, &quot;1&quot;)

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Standard_Group_Website_Event__c</fullName>
        <description>Indicates whether an event can be included in the &apos;Standard&apos; group website event view (if other filter criteria are also met)</description>
        <formula>AND(RecordType.DeveloperName &lt;&gt; &quot;News&quot;, RecordType.DeveloperName &lt;&gt; &quot;Holiday&quot;, RecordType.DeveloperName &lt;&gt; &quot;Term&quot;, Publish_on_Group_Site__c = TRUE, OR(Event_Start_Date__c &gt;= TODAY(), Event_End_Date__c &gt;= TODAY()))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Standard Group Website Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Standard_Portal_Event__c</fullName>
        <description>Indicates whether an event can be included in the &apos;Standard&apos; portal event view (if other filter criteria are also met)</description>
        <formula>AND(
    RecordType.Name != &quot;News&quot;, 
    Publish_in_Portal_School_Hub__c = TRUE, 
    OR(
       Is_This_Year_Record__c = TRUE,
       AND(
           OR(
              Event_Start_Date__c &gt;= TODAY(), 
              Event_End_Date__c &gt;= TODAY()
              ),
           Student_Group__r.Is_Whole_School_Group__c = TRUE
           )
       )
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Standard Portal Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Standard_School_Website_Event__c</fullName>
        <description>Indicates whether an event can be included in the &apos;Standard&apos; school website event view (if other filter criteria are also met) 20160224 SUSPECTED NOT USED: Nico needs to remove references from site before it can be deleted.</description>
        <formula>AND(
    RecordType.DeveloperName != &quot;News&quot;, 
    RecordType.DeveloperName != &quot;Holiday&quot;, 
    RecordType.DeveloperName != &quot;Term&quot;, 
    Publish_on_School_Site__c = TRUE, 
    OR(
       Event_Start_Date__c &gt;= TODAY(), 
       Event_End_Date__c &gt;= TODAY()
       )
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Standard School Website Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Student_Group__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Student Group</label>
        <referenceTo>Group__c</referenceTo>
        <relationshipLabel>Calendar</relationshipLabel>
        <relationshipName>News_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subtitle__c</fullName>
        <inlineHelpText>- For portal dates, please include any essential info (inc. time) in this field. This text will be visible under the title by default. (i.e. unlike the &apos;main text&apos; field, no extra clicks are required to view).
- For News, please add a short teaser</inlineHelpText>
        <label>Essential Info (inc time, if any)/Teaser</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Term_Date_Identifier__c</fullName>
        <description>Identifies whether the date entered is the first or last day of the term</description>
        <label>Date Is</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>First day of</fullName>
                </value>
                <value>
                    <fullName>Last day of</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Term_Grouping__c</fullName>
        <formula>IF(
   AND(
       MONTH(Event_Start_Date__c) &gt;= 8,
       MONTH(Event_Start_Date__c) &lt;= 12
       ),
   &quot;Term One&quot;,
   IF(
      Is_This_Year_Record__c = True,
      IF(
         Event_Start_Date__c &lt; First_Date_of_Term_3__c,
         &quot;Term Two&quot;,
         &quot;Term Three&quot;
         ),
      IF(
         Event_Start_Date__c &lt; First_Date_of_Term_3_Next_Year__c, 
         &quot;Term Two&quot;,
         &quot;Term Three&quot;
         )
      )
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term Grouping</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Term One</fullName>
                </value>
                <value>
                    <fullName>Term Two</fullName>
                </value>
                <value>
                    <fullName>Term Three</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_Period__c</fullName>
        <formula>IF(Is_Next_14_Day_Event__c = TRUE, &quot;01. Next 14 Days&quot;,

IF(Is_This_Term_Record__c = TRUE, &quot;02. Remainder of This Term&quot;,

IF(Is_This_Year_Record__c = TRUE, &quot;03. Remainder of This Academic Year&quot;,

IF(Is_More_Date__c = TRUE, &quot;04. Future Academic Years&quot;,

&quot;05. Past Date&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_English__c</fullName>
        <label>Title (English)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Translated_Record_Title__c</fullName>
        <description>Defines the &apos;Title&apos; that is pre-populated on the translated record when clicking the &apos;Translate&apos; button</description>
        <formula>IF(
   RecordType.DeveloperName = &quot;Term&quot;,
   &quot;DO NOT EDIT - AUTO-POPULATED&quot;,
   &quot;TRANSLATION REQUIRED&quot;
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Translated Record Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Video_1_TITLE__c</fullName>
        <description>The title of the matching video</description>
        <inlineHelpText>Introduce the title of the video you want to show in the Group Website.</inlineHelpText>
        <label>Video 1 TITLE</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Video_1_Title_English__c</fullName>
        <label>Video 1 Title (English)</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Video_1_URL__c</fullName>
        <description>This field is used to upload videos to the Group Site. The videos are hosted in the VIMEO premium account and this field only needs the url of it.</description>
        <inlineHelpText>Introduce the URL of the video you want to show in the Group Website. Include the whole url, ex: http://www.myvideo.com</inlineHelpText>
        <label>Video 1 URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Video_2_TITLE__c</fullName>
        <description>The title of the matching video</description>
        <inlineHelpText>Introduce the title of the video you want to show in the Group Website.</inlineHelpText>
        <label>Video 2 TITLE</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Video_2_Title_English__c</fullName>
        <label>Video 2 Title (English)</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Video_2_URL__c</fullName>
        <description>This field is used to upload videos to the Group Site. The videos are hosted in the VIMEO premium account and this field only needs the url of it.</description>
        <inlineHelpText>Introduce the URL of the video you want to show in the Group Website. Include the whole url, ex: http://www.myvideo.com</inlineHelpText>
        <label>Video 2 URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Video_3_TITLE__c</fullName>
        <description>The title of the matching video</description>
        <inlineHelpText>Introduce the title of the video you want to show in the Group Website.</inlineHelpText>
        <label>Video 3 TITLE</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Video_3_Title_English__c</fullName>
        <label>Video 3 Title (English)</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Video_3_URL__c</fullName>
        <description>This field is used to upload videos to the Group Site. The videos are hosted in the VIMEO premium account and this field only needs the url of it.</description>
        <inlineHelpText>Introduce the URL of the video you want to show in the Group Website. Include the whole url, ex: http://www.myvideo.com</inlineHelpText>
        <label>Video 3 URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>webId__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>webId</label>
        <type>Text</type>
    </fields>
    <label>News &amp; Events</label>
    <listViews>
        <fullName>All_School_Calendar_Entries</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Student_Group__c</columns>
        <columns>Event_Start_Date__c</columns>
        <columns>Event_End_Date__c</columns>
        <columns>Academic_Year__c</columns>
        <columns>Publish_in_Portal_School_Hub__c</columns>
        <columns>Publish_on_School_Site__c</columns>
        <columns>Language__c</columns>
        <columns>Share_with_Admin_Dept_of__c</columns>
        <columns>School__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Sort_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>News_Events__c.News</value>
        </filters>
        <filters>
            <field>Language__c</field>
            <operation>equals</operation>
            <value>EN</value>
        </filters>
        <label>All School Calendar Entries</label>
        <language>en_US</language>
        <sharedTo>
            <group>BSF_Group_Directors_Admin</group>
            <group>BSF_Group_Marketing</group>
            <group>NAE_Group_Marketing</group>
            <group>System_Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_School_News</fullName>
        <columns>NAME</columns>
        <columns>Publish_on_School_Site__c</columns>
        <columns>School__c</columns>
        <columns>School_Override_Field__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>Sort_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>News_Events__c.News</value>
        </filters>
        <filters>
            <field>Language__c</field>
            <operation>equals</operation>
            <value>EN</value>
        </filters>
        <label>All School News</label>
        <language>en_US</language>
        <sharedTo>
            <group>BSF_Group_Directors_Admin</group>
            <group>BSF_Group_Marketing</group>
            <group>NAE_Group_Marketing</group>
            <group>System_Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Current_Featured_News_Items</fullName>
        <columns>NAME</columns>
        <columns>Publish_on_School_Site__c</columns>
        <columns>Keep_in_News_Slideshow_Until_Override__c</columns>
        <columns>Share_with_Admin_Dept_of__c</columns>
        <columns>School__c</columns>
        <columns>School_Override_Field__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>Sort_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>News_Events__c.News</value>
        </filters>
        <filters>
            <field>Keep_in_News_Slideshow_Until_Override__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Publish_on_School_Site__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Current Featured News Items</label>
        <language>en_US</language>
        <sharedTo>
            <group>BSF_Group_Directors_Admin</group>
            <group>BSF_Group_Marketing</group>
            <group>NAE_Group_Marketing</group>
            <group>System_Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Events_with_Email_Sending_Errors</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Student_Group__c</columns>
        <columns>Event_Start_Date__c</columns>
        <columns>Event_End_Date__c</columns>
        <columns>Send_Automated_Reminder_Email__c</columns>
        <columns>Publish_in_Portal_School_Hub__c</columns>
        <columns>Publish_on_School_Site__c</columns>
        <columns>Language__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>School__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Has_Error_IDs__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>Send_Automated_Reminder_Email__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Events with Email Sending Errors</label>
        <language>en_US</language>
        <sharedTo>
            <group>System_Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X01A_ISM_School_News_All</fullName>
        <booleanFilter>1 AND (2 OR 3) AND 4</booleanFilter>
        <columns>NAME</columns>
        <columns>Publish_on_School_Site__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>Sort_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>News_Events__c.News</value>
        </filters>
        <filters>
            <field>School_Text__c</field>
            <operation>equals</operation>
            <value>The International School of Moscow</value>
        </filters>
        <filters>
            <field>School_Override_Field__c</field>
            <operation>includes</operation>
            <value>Moscow</value>
        </filters>
        <filters>
            <field>Language__c</field>
            <operation>equals</operation>
            <value>EN</value>
        </filters>
        <label>01A. ISM School News (All)</label>
        <language>en_US</language>
        <sharedTo>
            <group>Group_Web_Devs</group>
            <group>ISM_News_Events_Managers</group>
            <group>NAE_Group_Marketing</group>
            <group>System_Administrators</group>
            <roleAndSubordinatesInternal>Headteacher_ISM</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X01B_Group_News_Published</fullName>
        <booleanFilter>1 AND 4 AND (2 OR 3) AND 5</booleanFilter>
        <columns>NAME</columns>
        <columns>Subtitle__c</columns>
        <columns>Main_Text__c</columns>
        <columns>Publish_on_School_Site__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>Sort_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>News_Events__c.News</value>
        </filters>
        <filters>
            <field>Publish_on_School_Site__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Publish_on_Group_Site__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>School_Override_Field__c</field>
            <operation>includes</operation>
            <value>Group Site</value>
        </filters>
        <filters>
            <field>Language__c</field>
            <operation>equals</operation>
            <value>EN</value>
        </filters>
        <label>12B. Group News (Published)</label>
        <language>en_US</language>
        <sharedTo>
            <group>BSF_Group_Directors_Admin</group>
            <group>BSF_Group_Marketing</group>
            <group>System_Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X01B_ISM_School_News_Published</fullName>
        <booleanFilter>1 AND 2 AND (3 OR 4) AND 5</booleanFilter>
        <columns>NAME</columns>
        <columns>Subtitle__c</columns>
        <columns>Main_Text__c</columns>
        <columns>Publish_on_School_Site__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>Sort_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>News_Events__c.News</value>
        </filters>
        <filters>
            <field>Publish_on_School_Site__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>School_Override_Field__c</field>
            <operation>includes</operation>
            <value>Moscow</value>
        </filters>
        <filters>
            <field>School_Text__c</field>
            <operation>equals</operation>
            <value>The International School of Moscow</value>
        </filters>
        <filters>
            <field>Language__c</field>
            <operation>equals</operation>
            <value>EN</value>
        </filters>
        <label>01B. ISM School News (Published)</label>
        <language>en_US</language>
        <sharedTo>
            <group>Group_Web_Devs</group>
            <group>ISM_News_Events_Managers</group>
            <group>NAE_Group_Marketing</group>
            <group>System_Administrators</group>
            <roleAndSubordinatesInternal>Headteacher_ISM</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X01C_ISM_School_News_Featured</fullName>
        <booleanFilter>1 AND (2 OR 5) AND 3 AND 4 AND 6</booleanFilter>
        <columns>NAME</columns>
        <columns>Publish_on_School_Site__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>Sort_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>News_Events__c.News</value>
        </filters>
        <filters>
            <field>School_Text__c</field>
            <operation>equals</operation>
            <value>The International School of Moscow</value>
        </filters>
        <filters>
            <field>Publish_on_School_Site__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Keep_in_News_Slideshow_Until_Override__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>School_Override_Field__c</field>
            <operation>includes</operation>
            <value>Moscow</value>
        </filters>
        <filters>
            <field>Language__c</field>
            <operation>equals</operation>
            <value>EN</value>
        </filters>
        <label>01C. ISM School News (Featured)</label>
        <language>en_US</language>
        <sharedTo>
            <group>Group_Web_Devs</group>
            <group>ISM_News_Events_Managers</group>
            <group>NAE_Group_Marketing</group>
            <group>System_Administrators</group>
            <roleAndSubordinatesInternal>Headteacher_ISM</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X01D_ISM_School_News_Not_Published</fullName>
        <booleanFilter>1 AND (2 OR 4) AND 3 AND 5</booleanFilter>
        <columns>NAME</columns>
        <columns>Publish_on_School_Site__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>Sort_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>News_Events__c.News</value>
        </filters>
        <filters>
            <field>School_Text__c</field>
            <operation>equals</operation>
            <value>The International School of Moscow</value>
        </filters>
        <filters>
            <field>Publish_on_School_Site__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>School_Override_Field__c</field>
            <operation>includes</operation>
            <value>Moscow</value>
        </filters>
        <filters>
            <field>Language__c</field>
            <operation>equals</operation>
            <value>EN</value>
        </filters>
        <label>01D. ISM School News (Not Published)</label>
        <language>en_US</language>
        <sharedTo>
            <group>Group_Web_Devs</group>
            <group>ISM_News_Events_Managers</group>
            <group>NAE_Group_Marketing</group>
            <group>System_Administrators</group>
            <roleAndSubordinatesInternal>Headteacher_ISM</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X01F_ISM_Future_Calendar_This_Year</fullName>
        <booleanFilter>1 AND 2 AND 3 AND (4 OR 5) AND 6</booleanFilter>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Student_Group__c</columns>
        <columns>Event_Start_Date__c</columns>
        <columns>Event_End_Date__c</columns>
        <columns>Publish_in_Portal_School_Hub__c</columns>
        <columns>Publish_on_School_Site__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Sort_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>News_Events__c.News,News_Events__c.News_Translation,News_Events__c.New_Translation</value>
        </filters>
        <filters>
            <field>School_Text__c</field>
            <operation>equals</operation>
            <value>The International School of Moscow</value>
        </filters>
        <filters>
            <field>Is_This_Year_Record__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Event_Start_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Event_End_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Language__c</field>
            <operation>equals</operation>
            <value>EN</value>
        </filters>
        <label>01F. ISM Future Calendar (This Year)</label>
        <language>en_US</language>
        <sharedTo>
            <group>Group_Web_Devs</group>
            <group>ISM_News_Events_Managers</group>
            <group>NAE_Group_Marketing</group>
            <group>System_Administrators</group>
            <roleAndSubordinatesInternal>Headteacher_ISM</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X01G_ISM_Future_Term_Hols_This_Year</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Student_Group__c</columns>
        <columns>Event_Start_Date__c</columns>
        <columns>Event_End_Date__c</columns>
        <columns>Publish_in_Portal_School_Hub__c</columns>
        <columns>Publish_on_School_Site__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Sort_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>News_Events__c.Term,News_Events__c.Holiday</value>
        </filters>
        <filters>
            <field>School_Text__c</field>
            <operation>equals</operation>
            <value>The International School of Moscow</value>
        </filters>
        <filters>
            <field>Is_This_Year_Record__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Language__c</field>
            <operation>equals</operation>
            <value>EN</value>
        </filters>
        <label>01G. ISM Future Term &amp; Hols (This Year)</label>
        <language>en_US</language>
        <sharedTo>
            <group>Group_Web_Devs</group>
            <group>ISM_News_Events_Managers</group>
            <group>NAE_Group_Marketing</group>
            <group>System_Administrators</group>
            <roleAndSubordinatesInternal>Headteacher_ISM</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
</CustomObject>